SF-1627 Fix audio player in RTL mode
- Prevent scrollbar
- Mirror play button

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-audio-player/checking-audio-player.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-audio-player/checking-audio-player.component.scss
@@ -16,6 +16,10 @@
     .slider {
       flex: 1;
       width: 100%;
+      overflow: hidden; // prevent overflow when UI is RTL
+    }
+    .play {
+      transform: rotateY(180deg);
     }
   }
 
